--- a/wx-src/pages/keyboardPaste.css
+++ b/wx-src/pages/keyboardPaste.css
@@ -126,6 +126,7 @@ body {
 
 #shortcut-list-content table > thead {
     display: block;
+    width: 420px;
     height: var(--col-hdr-height);
     background-color: #eee;
     border-bottom: 1px solid #d4d4d4;
@@ -142,8 +143,9 @@ body {
 
 #shortcut-list-content table > tbody {
     display: block;
+    width: 420px;
     height: 186px;
-    overflow-x: none;
+    overflow-x: hidden;
     overflow-y: auto;
 }
 
